# thermodynamics

./: AGENT.md  ARCHITECTURE.md  CONTRIBUTING.md  Cargo.toml  GETTING_STARTED.md  PLUG_AND_PLAY.md  README.md
memory/: JOURNAL.md
src/: agent_budget.rs  carnot.rs  constants.rs  entropy.rs  gas.rs  heat_transfer.rs  laws.rs  lib.rs  maxwell.rs  phase.rs  statistical.rs  tests.rs
