[package]
name = "thermodynamics"
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"
repository = "https://github.com/SuperInstance/thermodynamics"
description = "Thermodynamics in Rust — ideal gas, Carnot cycle, entropy, thermodynamic potentials, heat engines"

[dependencies]
serde = { version = "1", features = ["derive"] }
nalgebra = "0.33"
